--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@storyblok/react": "^3.0.10",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "storyblok-rich-text-react-renderer": "^2.9.2"
+    "classnames": "^2.5.1",
+    "next": "15.5.2",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "storyblok-rich-text-react-renderer": "^2.9.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.5.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
