fix imp of new storyblok

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_PREVIEW_STORYBLOK_TOKEN=""
 NEXT_PUBLIC_PRODUCTION_STORYBLOK_TOKEN=""
+STORYBLOK_DELIVERY_API_ACCESS_TOKEN=""
+NEXT_PUBLIC_STORYBLOK_DELIVERY_API_ACCESS_TOKEN=
