--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@storyblok/react": "^3.0.10",
+    "@storyblok/react": "^5.4.4",
     "classnames": "^2.5.1",
     "next": "15.5.2",
     "react": "19.1.1",
@@ -18,9 +18,9 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "eslint": "^8",
     "eslint-config-next": "15.5.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^4"
   }
 }
